deployment/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <repo>
  labels:
    app: <repo>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <repo>
  template:
    metadata:
      labels:
        app: <repo>
    spec:
      containers:
        - name: <repo>
          image: aicollaboration/<repo>:<VERSION>
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
      restartPolicy: Always
