deployment/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: question-answering
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
  selector:
    app: question-answering
