deployment/manifests/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: <repo>-aicollaboration.io
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - aiproduct.io
    secretName: tls-latest-aiproduct.io
  rules:
   - host: <repo>.aiproduct.io
     http:
      paths:
      - path: /
        backend:
          serviceName: <repo>
          servicePort: 5000
